album module working...
album.html index.css modified

--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -24,36 +24,44 @@
             
             <ul class="ui-grid-c">
             	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
+            	</li>
+            	<li class="ui-block-b overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
+            	</li>
+            	<li class="ui-block-c overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
+            	</li>
+            	<li class="ui-block-d overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
             	</li>
             	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
             	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
+            	<li class="ui-block-b overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
             	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
+            	<li class="ui-block-c overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
             	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
-            	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
-            	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
-            	</li>
-            	<li class="ui-block-a overflow">
-            		<img src="img/11.png" alt="" />
-            		<p>A</p>
+            	<li class="ui-block-d overflow">
+            		<img src="img/11.png" alt="" style="width:100%;height:90%" />
+            		<br />
+            		<p></p>
             	</li>
             </ul>
             
