nearly finish album module
ready to do video module.

--- a/assets/www/about.html
+++ b/assets/www/about.html
@@ -5,6 +5,7 @@
 
 	</head>
 	<body>
+		<script type="text/javascript" src="test/fileupload.js"></script>
 		<p id="deviceProperties">
 			Loading device properties...
 		</p>
