--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable=no, minimum-scale = 1, maximum-scale = 1" />
         <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
         <link rel="stylesheet" href="style/index.css" />
+        <link rel="stylesheet" href="test/photoswipe.css" />
         
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -123,11 +124,7 @@
         </div>
                
     </body>
-    <script type="text/javascript">
-        // clearHistory();
-    </script>
 </html>
-cordova-2.0.0.jar
 
 
 
