complete album module

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="ui-block-d">
-                        <a href="video.html" id="index2video"><img src="images/video.png"></a>
+                        <a href="videoType.html" id="index2video"><img src="images/video.png"></a>
                         <div>
                             视频
                         </div>
