--- a/assets/www/video.html
+++ b/assets/www/video.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div data-role="page" data-title="video" id="videoPlay">
+        		<script type="text/javascript" src="js/video/video.js"></script>
             <script type="text/javascript" src="js/video/getVideo.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
                 <a href="videoList.html" data-icon="arrow-l" data-mini="true">返回</a><h1 id="videoName"></h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
@@ -16,9 +17,10 @@
                 <!-- <video style="width:100%; height:100%;"
                 src="http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8"
                 controls autoplay></video> -->
-                <a href="#" onclick="playVideoNow('http://118.228.16.44/youku/6754C2FAC3B834F5EEAD4FC2/0300200100501232214EE707540B3195B66524-F46C-C889-00B5-A0A096FF369E.mp4');">Play Video now!</a>
-                <a href="#" onclick="playVideoNow('http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8');">Youku video</a>
-
+                <ul data-role="listview">
+	                	<li><a href="#" onclick="playVideoNow('http://m.youku.com/smartphone/pvs?vid=XNDI0NTI2MDgw');">Play Video now!</a></li>
+	                	<li><a href="#" onclick="playVideoNow('http://v.youku.com/player/getM3U8/vid/XMzc2OTAwNjQ4/v.m3u8');">Youku video</a></li>
+                </ul>
 
             </div>
 
