--- a/assets/www/videoType.html
+++ b/assets/www/videoType.html
@@ -5,13 +5,13 @@
         <title>Video</title>
     </head>
     <body>
-        <div data-role="page" data-title="video" id="videolist">
+        <div data-role="page" data-title="video" id="videotype">
             <div data-role="header" data-position="fixed" data-theme="b">
                 <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>视频</h1>
             </div>
-            <script type="text/javascript" src="js/video/getVideoList.js"></script>
+            <script type="text/javascript" src="js/video/getVideoType.js"></script>
             <div data-role="content" data-theme="c">
-                <ul data-role="listview" id="videoListContent">
+                <ul data-role="listview" id="videoTypeContent">
                 </ul>
 
             </div>
