nearly complete video module.
ready to activity module.
ready to fix bugs.
ready to speed up.

--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -9,7 +9,7 @@
 			<div data-role="header" data-theme="b">
 				<a href="albumlist.html" data-icon="arrow-l" data-mini="true">返回</a>
 					<h1>相册</h1>
-				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a>
+				<a href="index.html" data-icon="home" data-mini="true">首页</a>
 			</div>
 			
 			<script type="text/javascript" src="test/klass.min.js"></script>
