--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -74,7 +74,7 @@
                             教室
                         </div>
                     </div>
-                    <div class="ui-block-d">
+<!--                     <div class="ui-block-d">
                         <a href="office.html" id="index2office"><img src="images/office.png"></a>
                         <div>
                             办公
@@ -85,9 +85,9 @@
                         <div>
                             一卡通
                         </div>
-                    </div>
+                    </div> -->
                     <div class="ui-block-d">
-                        <a href="bus.html" id="index2bus"><img src="images/car.png"></a>
+                        <a href="schoolBus.html" id="index2bus"><img src="images/car.png"></a>
                         <div>
                             校车
                         </div>
@@ -110,7 +110,7 @@
                 		<li>
                 			<a href="college.html" data-icon="grid" data-mini="true">学院</a>
                 		</li>
-                		<li><a href="login.html" data-icon="home">账号</a></li>
+                		<li><a href="login.html" data-icon="check">账号</a></li>
                 		<li>
                 			<a href="config.html" data-icon="gear">配置</a>
                 		</li>
