--- a/assets/www/activityList.html
+++ b/assets/www/activityList.html
@@ -7,7 +7,7 @@
     <body>
         <div data-role="page" data-title="activitylist" id="activityList">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>活动</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>活动</h1>
             </div>
             <script type="text/javascript" src="js/getActivityList.js"></script>
             <div data-role="content">
