--- a/assets/www/albumlist.html
+++ b/assets/www/albumlist.html
@@ -7,7 +7,7 @@
 	<body>
 		<div data-role="page" data-title="albumList" id="albumList">
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>相册</h1>
+				<a href="index.html" data-icon="home" data-mini="true">首页</a><h1>相册</h1>
 			</div>
 			<script type="text/javascript" src="js/albumList.js"></script>
 			<div data-role="content">
