--- a/assets/www/classroom.html
+++ b/assets/www/classroom.html
@@ -8,7 +8,7 @@
         <div data-role="page" id="classroom" data-title="classroom">
             <script type="text/javascript" src="js/getClassroomList.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>教室</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>教室</h1>
 
             </div>
             <!-- /header -->
