--- a/assets/www/college.html
+++ b/assets/www/college.html
@@ -9,7 +9,7 @@
         <div data-role="page" data-title="course" id="course">
             <script type="text/javascript" src="js/getCollege.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>学院</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>学院</h1>
             </div>
 
             <div data-role="content">
