--- a/assets/www/favorCourseList.html
+++ b/assets/www/favorCourseList.html
@@ -9,7 +9,7 @@
 	<div data-role="page" data-title="course" id="pcourseList">
 	    
 	    <div data-role="header" data-position="fixed" data-theme="b">
-            <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>我的收藏</h1>
+            <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>我的收藏</h1>
         </div>
         <script type="text/javascript" src="js/getFavorCourseList.js"></script>
 	    <div data-role="content" id="pCourseListContent" data-theme="c">
