--- a/assets/www/map.html
+++ b/assets/www/map.html
@@ -8,7 +8,7 @@
 		<div data-role="page" id="map" data-title="map">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>地图</h1>
+				<a href="index.html" data-icon="home" data-mini="true">首页</a><h1>地图</h1>
 			</div>
 			<!-- /header -->
 			<script type="text/javascript" src="js/getMap.js"></script>
