--- a/assets/www/newsdetail.html
+++ b/assets/www/newsdetail.html
@@ -8,7 +8,9 @@
 		<div data-role="page" id="newsdetail" data-title="newsdetail">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a><h1>新闻</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
+				<a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a>
+					<h1>新闻</h1>
+				<a href="index.html" data-icon="home" data-mini="true">首页</a>
 				<!--这里使用  data-rel="back" 因为可能是别的地方调用课程元素-->
 
 			</div><!-- /header -->
