--- a/assets/www/old_map.html
+++ b/assets/www/old_map.html
@@ -7,7 +7,7 @@
 <body>
     <div data-role="page" id="map" data-title="map">
         <div data-role="header" data-position="fixed" data-theme="b">
-            <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>教室</h1>
+            <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>教室</h1>
         </div>
         <div><span class="font17pt inlineBlock textCenter" style="width:100%;">北京信息科技大学校区地图</span></div>
         <br/>
