--- a/assets/www/videoList.html
+++ b/assets/www/videoList.html
@@ -7,7 +7,9 @@
     <body>
         <div data-role="page" data-title="video" id="videolist">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>视频</h1>
+                <a href="videoType.html" data-icon="arrow-l" data-mini="true">返回</a>
+                		<h1>视频</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a>
             </div>
             <script type="text/javascript" src="js/video/getVideoList.js"></script>
             <div data-role="content" data-theme="c">
