--- a/assets/www/videoType.html
+++ b/assets/www/videoType.html
@@ -7,7 +7,7 @@
     <body>
         <div data-role="page" data-title="video" id="videotype">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>视频</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>视频</h1>
             </div>
             <script type="text/javascript" src="js/video/getVideoType.js"></script>
             <div data-role="content" data-theme="c">
