--- a/assets/www/yellowpage.html
+++ b/assets/www/yellowpage.html
@@ -8,7 +8,7 @@
         <div data-role="page" id="yellowpage" data-title="yellowpage">
 
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>黄页</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>黄页</h1>
             </div><!-- /header -->
             <script type="text/javascript" src="js/getYellowPage.js"></script>
             <div data-role="content" id="yellowPageContent" data-theme="c">
