--- a/assets/www/yellowpageDetail.html
+++ b/assets/www/yellowpageDetail.html
@@ -7,7 +7,7 @@
 	<body>
 		<div data-role="page" id="yellowpagedetail" data-title="yellowpagedetail">
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>黄页</h1>
+				<a href="index.html" data-icon="home" data-mini="true">首页</a><h1>黄页</h1>
 			</div><!-- /header -->
 			
 			<script type="text/javascript" src="js/getYellowpageList.js"></script>
