--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -12,8 +12,8 @@
 				<a href="index.html" data-icon="home" data-mini="true">首页</a>
 			</div>
 			
-			<script type="text/javascript" src="test/klass.min.js"></script>
-			<script type="text/javascript" src="test/code.photoswipe.jquery-3.0.5.min.js"></script>
+			<script type="text/javascript" src="js/klass.min.js"></script>
+			<script type="text/javascript" src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
 			<script type="text/javascript" src="js/getAlbum.js"></script>
 			<div data-role="content" data-theme="c">
 				<ul class="gallery" id="albumContent">
