--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable=no, minimum-scale = 1, maximum-scale = 1" />
         <link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
         <link rel="stylesheet" href="style/index.css" />
-        <link rel="stylesheet" href="test/photoswipe.css" />
+        <link rel="stylesheet" href="style/photoswipe.css" />
         
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
