--- a/assets/www/activity.html
+++ b/assets/www/activity.html
@@ -13,8 +13,7 @@
 			</div>
 			<script type="text/javascript" src="js/activity/activity.js"></script>
 			<div data-role="content" id="activityContent" data-theme="c">
-				<h1 id="activityContent_title"></h1>
-				&nbsp;&nbsp;&nbsp;&nbsp;<p id="activityContent_time"></p>
+				&nbsp;&nbsp;&nbsp;&nbsp;<h3 id="activityContent_title"></h3>
 				<div>
 					&nbsp;&nbsp;&nbsp;&nbsp;<span id="activityContent_tel"></span>
 				</div>
@@ -24,6 +23,19 @@
 				<div>
 					&nbsp;&nbsp;&nbsp;&nbsp;<span id="activityContent_info"></span>
 				</div>
+				<div id="activityListView">
+                    <ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+                        <!-- <li>
+                            <a href="#" id="activityStartTime"></a>
+                        </li>
+                        <li>
+                            <a href="#" id="activityEndTime"></a>
+                        </li>
+                        <li>
+                            <a href="#" id="activityAdress"></a>
+                        </li> -->
+                    </ul>
+                </div>
 			</div>
 			<div data-role="footer" data-position="fixed" data-theme="c">
 				<div data-role="navbar" data-iconpos="right">
