modify activity.js and add favor button
add favor button action.but has no page to show favors;

--- a/assets/www/activity.html
+++ b/assets/www/activity.html
@@ -13,7 +13,7 @@
 			</div>
 			<script type="text/javascript" src="js/activity/activity.js"></script>
 			<div data-role="content" id="activityContent" data-theme="c">
-				&nbsp;&nbsp;&nbsp;&nbsp;<h3 id="activityContent_title"></h3>
+				<h3 id="activityContent_title"></h3>
 				<div>
 					&nbsp;&nbsp;&nbsp;&nbsp;<span id="activityContent_tel"></span>
 				</div>
@@ -25,15 +25,6 @@
 				</div>
 				<div id="activityListView">
                     <ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-                        <!-- <li>
-                            <a href="#" id="activityStartTime"></a>
-                        </li>
-                        <li>
-                            <a href="#" id="activityEndTime"></a>
-                        </li>
-                        <li>
-                            <a href="#" id="activityAdress"></a>
-                        </li> -->
                     </ul>
                 </div>
 			</div>
