start for MS version

--- a/assets/www/intro.html
+++ b/assets/www/intro.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>intro</title>
     </head>
     <body>
         <div data-role="page" id="info" data-title="info">
@@ -41,7 +41,7 @@
 
             </div>
             <!-- /footer -->
-            <script language="javascript">
+            <script>
                 $("#introToInfo").click(function() {
                     $("#introContent").html("<p>　　北京信息科技大学是由原北京机械工业学院和原北京信息工程学院合并组建，以工管为主体、工管理经文法多学科协调发展，以培养高素质应用型人才为主、北京市重点支持建设的全日制普通高等学校。</p> <p> 　　学校秉承“勤以为学，信以立身”的校训，发扬“抢抓机遇、迎难而上、争先创优、挑战自我”的新大学精神，坚持办学指导思想，明确发展目标和办学定位，传承办学优势与特色，紧紧依靠广大师生员工，抓建设、促改革、谋发展，内涵建设与外延发展等各项事业取得显著成效。</p> <p> 　　面向未来，学校正以坚定步伐朝着“在电子信息、现代制造与光机电一体化、知识管理与技术经济等领域的优势与特色更加突出，综合办学实力稳居北京市属高校前列，并早日达到国内同类高校的一流水平”的奋斗目标迈进。</p>");
                 });
