--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -10,10 +10,10 @@
         
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/cordova-2.0.0.js"></script>
+        <script type="text/javascript" src="js/cordova-2.1.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
         <script type="text/javascript" src="js/video/video.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile-1.1.0.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.2.0-rc.1.min.js"></script>
         <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
     </head>
     <body>
