--- a/assets/www/news.html
+++ b/assets/www/news.html
@@ -18,7 +18,7 @@
             <div data-role="content"  data-theme="c">
                 <ul data-role="listview" id="latestNews" class="ui-listview ui-shadow">
                     <li>
-                        <a href="newsdetail.html">***“2011全国高校辅导员年度人物”评选结果出炉，我校..</a>
+                        <a href="newsdetail.html">2011全国高校辅导员年度人物”评选结果出炉，我校</a>
                         <p> 2012/04/28 </p>
                     </li>
                     <li>
