jqm1.2r2 & style change

--- a/assets/www/networkError.html
+++ b/assets/www/networkError.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Network error!</title>
+	<link rel="stylesheet" href="jquery.mobile-1.1.0.css" />
 </head>
 <body>
 	
@@ -15,5 +16,11 @@
 		</div>
 		
 	</div>
+	
+	<script type="text/javascript">
+	    
+	    $("#networkErrorPage").trigger('create');
+	    
+	</script>
 </body>
 </html>
