--- a/assets/www/news.html
+++ b/assets/www/news.html
@@ -16,13 +16,13 @@
             </form>
 
             <div data-role="content"  data-theme="c">
-                <ul data-role="listview" id="latestNews" class="ui-listview ui-shadow">
+                <ul data-role="listview" data-theme="c" id="latestNews" class="ui-listview ui-shadow">
                     
                 </ul>
             </div>
             <!-- /content -->
 
-            <div data-role="footer"  data-position="fixed"  data-theme="c">
+           <!--  <div data-role="footer"  data-position="fixed"  data-theme="c">
                 <div data-role="navbar">
                     <ul>
                         <li>
@@ -33,9 +33,7 @@
                         </li>
                     </ul>
                 </div>
-                <!-- /navbar -->
-            </div>
-            <!-- /footer -->
+            </div> -->
             <script type="text/javascript" src="js/getLatestNews.js"></script>
         </div>
     </body>
