switch to jqm1.2  use jqm_1.2 and news module is ready.

--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -12,6 +12,11 @@
 			</div><!-- /header -->
             <script type="text/javascript" src="js/getNewsCategory.js"></script>
 			<div data-role="content"  data-theme="c">
+			    
+			    <ul data-role="listview" data-inset="true" class="ui-listview ui-shadow">
+                    <li><a href="activities.html">新闻收藏</a></li>
+                </ul>
+			    
 				<ul data-role="listview" id="categoryNews" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					<li>
 						<a href="#">综合新闻</a>
