--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>index</title>
         <meta name="viewport" content = "width = device-width, initial-scale = 1, user-scalable=no, minimum-scale = 1, maximum-scale = 1" />
-        <link rel="stylesheet" href="style/jquery.mobile-1.2.0-rc.2.min.css" />
+        <link rel="stylesheet" href="style/jquery.mobile-1.2.0.min.css" />
         <link rel="stylesheet" href="style/index.css" />
         <link rel="stylesheet" href="style/photoswipe.css" />
         
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="js/cordova-2.1.0.js"></script>
         <script type="text/javascript" src="js/base.js"></script> 
         <script type="text/javascript" src="js/video/video.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile-1.2.0-rc.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.2.0.min.js"></script>
         <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
     </head>
     <body>
