rewrite base.js
 ready...

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="ui-block-c">
-                        <a href="college.html" id='index2intro'><img src="images/info.png"></a>
+                        <a href="collegeList.html" id='index2intro'><img src="images/info.png"></a>
                         <div>
                             学院
                         </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-               
+        <script type="text/javascript" src="js/init/updateData.js"></script>       
     </body>
 </html>
 
