--- a/assets/www/newsList.html
+++ b/assets/www/newsList.html
@@ -7,7 +7,7 @@
     <body>
         <div data-role="page" id="newsList" data-title="newsList">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>新闻</h1>
+                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>新闻</h1><a href="newscategory.html">分类</a>
             </div>
             <form action="#" method="post">
                 <div data-role="fieldcontain" style="background-color:#888;margin:0px 0px -1px 0px;padding:3px;">
