--- a/assets/www/schoolBus.html
+++ b/assets/www/schoolBus.html
@@ -8,7 +8,7 @@
 		<div data-role="page" id="car" data-title="car">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html" data-icon="arrow-l" data-mini="true">首页</a><h1>校车</h1>
+				<a href="index.html">首页</a><h1>校车</h1>
 			</div><!-- /header -->
 
 			<div data-role="content" data-theme="c">
