start activities and find some bugs

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="ui-block-c">
-                        <a href="activityList.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
+                        <a href="activities.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
                         <div>
                             活动
                         </div>
@@ -109,6 +109,9 @@
                 		</li>
                 	</ul>
                 </div>
+            </div>
+            <div id="splashScreen">
+                
             </div>
         </div>
         <script type="text/javascript" src="js/init/updateData.js"></script>       
