try to debug on ios

--- a/assets/www/activity.html
+++ b/assets/www/activity.html
@@ -7,7 +7,7 @@
 	<body>
 		<div data-role="page">
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="activityList.html" data-icon="arrow-l" data-mini="true">返回</a>
+				<a data-rel="back">返回</a>
 				<h1 id="activityContentTitle"></h1>
 				<a href="index.html" data-icon="home" data-mini="true">首页</a>
 			</div>
