--- a/assets/www/config.html
+++ b/assets/www/config.html
@@ -5,10 +5,16 @@
 	<title>Config</title>
 </head>
 <body>
+	<div data-role="page" id="home" data-title="Index" style="background-color:#3c3c3c">
+		<div data-role="header" data-position="fixed" data-theme="b">
+		<a href="index.html">返回</a><h1>配置</h1>
+		</div><!-- /header -->
+		<div data-role="content">	
+		<a href="#" data-role="button">清除缓存</a>
+		<a href="#" data-role="button">重新初始化数据</a>
 	
+		</div><!-- /content -->
+	</div>
 	<script type="text/javascript" src="js/setConfig.js"></script>
-	
-	<p>config now...</p>
-	
 </body>
 </html>
