add photoswipe success

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 					<div class="ui-block-c">
-						<a href="collegeList.html" id='index2intro'><img src="images/info.png"></a>
+						<a href="collegeList.html" id='index2intro'><img src="images/colleges.png"></a>
 						<div>
 							学院
 						</div>
@@ -55,12 +55,12 @@
 							地图
 						</div>
 					</div>
-					<div class="ui-block-c">
+					<!-- <div class="ui-block-c">
 						<a href="activities.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
 						<div>
 							活动
 						</div>
-					</div>
+					</div> -->
 					<div class="ui-block-c">
 						<a href="videoType.html" id="index2video"><img src="images/video.png"></a>
 						<div>
@@ -79,12 +79,12 @@
 							课程
 						</div>
 					</div>
-					<div class="ui-block-c">
+					<!-- <div class="ui-block-c">
 						<a href="building.html" id="index2classroom"><img src="images/classroom.png"></a>
 						<div>
 							教室
 						</div>
-					</div>
+					</div> -->
 					<div class="ui-block-c">
 						<a href="schoolBus.html" id="index2bus"><img src="images/car.png"></a>
 						<div>
@@ -121,6 +121,12 @@
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript" charset="utf-8">
+			document.addEventListener('backbutton',function(e){
+				e.preventDefault();
+				return false;
+			},false);
+		</script>
 		<script type="text/javascript" src="js/init/updateData.js"></script>
 	</body>
 </html>
