--- a/assets/www/videoList.html
+++ b/assets/www/videoList.html
@@ -7,15 +7,13 @@
     <body>
         <div data-role="page" data-title="video" id="videolist">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="videoType.html" data-icon="arrow-l" data-mini="true">返回</a>
-                		<h1>视频</h1>
-                <a href="index.html" data-icon="home" data-mini="true">首页</a>
+                <a href="videoType.html" data-mini="true">返回</a>
+                <h1>视频</h1>
             </div>
             <script type="text/javascript" src="js/video/getVideoList.js"></script>
             <div data-role="content" data-theme="c">
-                <ul data-role="listview" id="videoListContent">
+                <ul data-role="listview" class="ui-listview ui-shadow" data-theme="d" id="videoListContent">
                 </ul>
-
             </div>
 
         </div>
