--- a/assets/www/videoType.html
+++ b/assets/www/videoType.html
@@ -7,11 +7,11 @@
     <body>
         <div data-role="page" data-title="video" id="videotype">
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>视频</h1>
+                <a href="index.html">首页</a><h1>视频</h1>
             </div>
             <script type="text/javascript" src="js/video/getVideoType.js"></script>
             <div data-role="content" data-theme="c">
-                <ul data-role="listview" id="videoTypeContent">
+                <ul data-role="listview" class="ui-listview ui-shadow" id="videoTypeContent">
                 </ul>
 
             </div>
