--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -7,9 +7,9 @@
 	<body>
 		<div data-role="page" data-title="album"  data-add-back-btn="true" id="albumPage">
 			<div data-role="header" data-theme="b">
-				<a href="albumlist.html" data-icon="arrow-l" data-mini="true">返回</a>
+				<a href="albumlist.html" data-mini="true">返回</a>
 					<h1>相册</h1>
-				<a href="index.html" data-icon="home" data-mini="true">首页</a>
+				<a href="index.html" data-mini="true">首页</a>
 			</div>
 			
 			<script type="text/javascript" src="js/klass.min.js"></script>
