--- a/assets/www/intro.html
+++ b/assets/www/intro.html
@@ -5,10 +5,10 @@
         <title>intro</title>
     </head>
     <body>
-        <div data-role="page" id="info" data-title="info">
+        <div data-role="page" id="intro" data-title="info">
 
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="home">首页</a><h1>概况</h1>
+                <a href="about.html">关于</a><h1>概况</h1>
             </div>
             <!-- /header -->
             <div>
@@ -23,7 +23,7 @@
             </div>
             <!-- /content -->
 
-            <div data-role="footer"  data-position="fixed"  data-theme="c">
+            <!-- <div data-role="footer"  data-position="fixed"  data-theme="c">
                 <div data-role="navbar">
                     <ul>
                         <li>
@@ -37,11 +37,11 @@
                         </li>
                     </ul>
                 </div>
-                <!-- /navbar -->
+                
 
-            </div>
+            </div> -->
             <!-- /footer -->
-            <script>
+            <!-- <script>
                 $("#introToInfo").click(function() {
                     $("#introContent").html("<p>　　北京信息科技大学是由原北京机械工业学院和原北京信息工程学院合并组建，以工管为主体、工管理经文法多学科协调发展，以培养高素质应用型人才为主、北京市重点支持建设的全日制普通高等学校。</p> <p> 　　学校秉承“勤以为学，信以立身”的校训，发扬“抢抓机遇、迎难而上、争先创优、挑战自我”的新大学精神，坚持办学指导思想，明确发展目标和办学定位，传承办学优势与特色，紧紧依靠广大师生员工，抓建设、促改革、谋发展，内涵建设与外延发展等各项事业取得显著成效。</p> <p> 　　面向未来，学校正以坚定步伐朝着“在电子信息、现代制造与光机电一体化、知识管理与技术经济等领域的优势与特色更加突出，综合办学实力稳居北京市属高校前列，并早日达到国内同类高校的一流水平”的奋斗目标迈进。</p>");
                 });
@@ -52,7 +52,7 @@
                     $("#introContent").html("<p> 　　学校面向全国招生，现有全日制在校生11483人，其中硕士研究生828人、本科生10655人；成教学生3708人。</p><p> 　　学校设有机电工程学院、仪器科学与光电工程学院、信息与通信工程学院、自动化学院、计算机学院、经济管理学院、信息管理学院、政教学院、外国语学院、理学院10个学院和人文社科系、体育部，以及研究生部和继续教育学院等机构。</p> <p> 　　学校现有31个本科专业，覆盖工、管、理、经、文等学科门类，其中国家级特色专业建设点4个、北京市级特色专业建设点9个。 </p><p> 　　学校的研究生教育始于1981年，1993年取得硕士学位授予权。现有一级学科硕士点12个、二级学科硕士点42个，覆盖工、管、理、经、法等5个学科门类。现有工程硕士和工商管理硕士两个专业硕士学位授权种类，专业学位授权领域8个。</p> <p> 　　学校以培养高素质应用型人才为主，更新理念，创新思路，深入开展教学改革、教学建设和教学研究，近五年，取得国家级教育教学成果特等奖1项、一等奖1项、北京市教育教学成果奖14项，其中一等奖4项、二等奖9项、列入国家级规划教材选题17本、市级精品教材16本、市级精品课程9门，出版教材113部。学生在全国及北京市各类学科竞赛中获奖达935人次。2010年6月，学校以本科生为主组成的代表队在新加坡举行的中型机器人足球世界杯赛中战胜以博士生、硕士生和本科生混合编组的上届冠军荷兰爱因霍夫理工大学队取得冠军，为国家争得了荣誉。应届本科毕业生一次就业率保持在95%以上，毕业生受到用人单位好评。</p>");
                 });
 
-            </script>
+            </script> -->
         </div>
 
     </body>
