change style  use jqm-bistu.css

--- a/assets/www/pCourseDetail.html
+++ b/assets/www/pCourseDetail.html
@@ -8,8 +8,8 @@
 		<div data-role="page" id="pcoursedetail" data-title="pcoursedetail">
 			
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a>
-				<h1>课程信息</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
+				<a data-rel="back">返回</a>
+				<h1>课程信息</h1><a href="index.html">首页</a>
 
 			</div>
 			<script type="text/javascript" src="js/getPCourseDetail.js"></script>
