--- a/assets/www/video.html
+++ b/assets/www/video.html
@@ -10,9 +10,9 @@
         	
             <script type="text/javascript" src="js/video/getVideo.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="videoList.html" data-icon="arrow-l" data-mini="true">返回</a>
+                <a href="videoList.html">返回</a>
                 		<h1 id="videoTitleName"></h1>
-            		<a href="index.html" data-icon="home" data-mini="true">首页</a>
+            		<a href="index.html">首页</a>
             </div>
 
             <div data-role="content" id="videoContent" data-theme="c">
