--- a/assets/www/activity.html
+++ b/assets/www/activity.html
@@ -9,7 +9,7 @@
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a data-rel="back">返回</a>
 				<h1 id="activityContentTitle"></h1>
-				<a href="index.html" data-icon="home" data-mini="true">首页</a>
+				<a href="index.html">首页</a>
 			</div>
 			<script type="text/javascript" src="js/activity/activity.js"></script>
 			<div data-role="content" id="activityContent" data-theme="c">
