--- a/assets/www/activityList.html
+++ b/assets/www/activityList.html
@@ -8,7 +8,7 @@
 		<div data-role="page" id="activityListPage" data-title="activities">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="index.html" data-icon="home" data-mini="true">首页</a><h1>活动</h1>
+				<a href="index.html">首页</a><h1>活动</h1>
 				<script type="text/javascript" src="js/activity/activityList.js"></script>
 				<div data-role="navbar" id="activityListNavbar">
 					<ul data-role="listview" id="activityListUl">
