--- a/assets/www/building.html
+++ b/assets/www/building.html
@@ -8,7 +8,7 @@
         <div data-role="page" id="building" data-title="building">
             <script type="text/javascript" src="js/getBuildingList.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="index.html" data-icon="home" data-mini="true">首页</a><h1>教学楼</h1>
+                <a href="index.html">首页</a><h1>教学楼</h1>
 
             </div>
             <!-- /header -->
