--- a/assets/www/coursedetail.html
+++ b/assets/www/coursedetail.html
@@ -8,8 +8,8 @@
         <div data-role="page" id="coursedetail" data-title="coursedetail">
             <script type="text/javascript" src="js/getCourseDetail.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a data-rel="back" data-icon="arrow-l" data-mini="true">返回</a>
-                <h1>课程信息</h1><a href="index.html" data-icon="home" data-mini="true">首页</a>
+                <a data-rel="back">返回</a>
+                <h1>课程信息</h1><a href="index.html">首页</a>
             </div>
 
             <div data-role="content" id="courseDetailContent" data-theme="c">
