--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -6,6 +6,7 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<link rel="stylesheet" href="style/jquery.mobile-1.2.0.min.css" />
+		<link rel="stylesheet" href="style/jquery.mobile.theme-bistu.css" type="text/css" media="screen" charset="utf-8"/>
 		<link rel="stylesheet" href="style/index.css" />
 		<link rel="stylesheet" href="style/photoswipe.css" />
 
