--- a/assets/www/major.html
+++ b/assets/www/major.html
@@ -8,9 +8,9 @@
         <div data-role="page" id="major" data-title="major">
             <script type="text/javascript" src="js/major.js"></script>
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="college.html" data-icon="arrow-l" data-mini="true">返回</a>
+                <a href="college.html">返回</a>
                 		<h1 id="collegeNameInMajor"></h1>
-                	<a href="index.html" data-icon="home" data-mini="true">首页</a>
+                	<a href="index.html">首页</a>
             </div>
             <!-- /header -->
 
