--- a/assets/www/newscategory.html
+++ b/assets/www/newscategory.html
@@ -8,7 +8,7 @@
 		<div data-role="page" id="newscatgory" data-title="newscatgory">
 
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<a href="news.html" data-icon="home" data-mini="true">返回</a><h1>新闻</h1>
+				<a href="news.html">返回</a><h1>新闻</h1>
 			</div><!-- /header -->
             <script type="text/javascript" src="js/getNewsCategory.js"></script>
 			<div data-role="content"  data-theme="c">
