ready to release!  holly....

--- a/assets/www/config.html
+++ b/assets/www/config.html
@@ -10,8 +10,8 @@
 		<a href="index.html">返回</a><h1>配置</h1>
 		</div><!-- /header -->
 		<div data-role="content">	
-		<a href="#" data-role="button">清除缓存</a>
-		<a href="#" data-role="button">重新初始化数据</a>
+		<a href="#" id="config_wipeCache" data-role="button">清除缓存</a>
+		<a href="#" id="config_reinit" data-role="button">重新初始化数据</a>
 	
 		</div><!-- /content -->
 	</div>
