--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -35,10 +35,10 @@
 				</div>
 			</div>
 
-			<div data-role="content" id="indexOfApp" data-theme="c">
-				<div class="ui-grid-c mainpage" style="text-align:center">
+			<div data-role="content" style="border: none;" id="indexOfApp" data-theme="c">
+				<div class="ui-grid-c mainpage" id="indexPageGrid" style="text-align:center">
 
-					<div class="ui-block-c">
+					<!-- <div class="ui-block-c">
 						<a href="news.html" id="index2news"><img src="images/news.png"/></a>
 						<div>
 							新闻
@@ -55,14 +55,14 @@
 						<div>
 							地图
 						</div>
-					</div>
+					</div> -->
 					<!-- <div class="ui-block-c">
 						<a href="activities.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
 						<div>
 							活动
 						</div>
 					</div> -->
-					<div class="ui-block-c">
+					<!-- <div class="ui-block-c">
 						<a href="videoType.html" id="index2video"><img src="images/video.png"></a>
 						<div>
 							视频
@@ -79,14 +79,14 @@
 						<div>
 							课程
 						</div>
-					</div>
+					</div> -->
 					<!-- <div class="ui-block-c">
 						<a href="building.html" id="index2classroom"><img src="images/classroom.png"></a>
 						<div>
 							教室
 						</div>
 					</div> -->
-					<div class="ui-block-c">
+					<!-- <div class="ui-block-c">
 						<a href="schoolBus.html" id="index2bus"><img src="images/car.png"></a>
 						<div>
 							校车
@@ -97,13 +97,13 @@
 						<div>
 							黄页
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
 			</div>
 
-			<div data-role="footer"  data-position="fixed" class="nav-glyphish-example">
+			<div data-role="footer"  data-position="fixed" class="overhidden nav-glyphish-example">
 				<div data-role="navbar" class="nav-glyphish-example"  data-theme="a">
 					<ul>
 						<li>
