--- a/assets/www/major.html
+++ b/assets/www/major.html
@@ -14,14 +14,10 @@
             </div>
             <!-- /header -->
 
-            <div data-role="content"  data-theme="c">
-
-                <div class="content-primary">
-                    <ul id="majorList" data-role="listview" data-inset="true" data-theme="d" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-                        
-                    </ul>
-                </div>
-
+            <div data-role="content">
+                <ul id="majorList" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+                    
+                </ul>
             </div>
             <!-- /content -->
 
