--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="style/photoswipe.css" />
 
 		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/cordova-2.2.0.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/base.js"></script>
 		<script type="text/javascript" src="js/video/video.js"></script>
 		<script type="text/javascript" src="js/jquery.mobile-1.2.0.min.js"></script>
@@ -20,7 +20,7 @@
 		<script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
 			function onDeviceReady() {
-				navigator.splashscreen.show();
+				navigator.splashscreen.hide();
 			}
 		</script>
 
