--- a/assets/www/album.html
+++ b/assets/www/album.html
@@ -2,31 +2,20 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>album</title>
+		<title>AlbumList</title>
 	</head>
 	<body>
-		<div data-role="page" data-title="album"  data-add-back-btn="true" id="albumPage">
-			<div data-role="header" data-theme="b">
-				<a href="albumlist.html" data-mini="true">返回</a>
-					<h1>相册</h1>
-				<a href="index.html" data-mini="true">首页</a>
+		<div data-role="page" data-title="albumList" id="albumList">
+			<div data-role="header" data-position="fixed" data-theme="b">
+				<a href="index.html" data-mini="true">首页</a><h1>相册</h1>
 			</div>
-			
-			<script type="text/javascript" src="js/klass.min.js"></script>
-			<script type="text/javascript" src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
-			<script type="text/javascript" src="js/getAlbum.js"></script>
-			<div data-role="content" data-theme="c">
-				<ul class="gallery" id="albumContent">
-				<!--	
-					<li><a href="test/images/full/001.jpg" rel="external"><img src="test/images/thumb/001.jpg" alt="Image 01" /></a></li>
-					<li><a href="test/images/full/002.jpg" rel="external"><img src="test/images/thumb/002.jpg" alt="Image 02" /></a></li>
-					<li><a href="test/images/full/003.jpg" rel="external"><img src="test/images/thumb/003.jpg" alt="Image 03" /></a></li>
-					<li><a href="test/images/full/004.jpg" rel="external"><img src="test/images/thumb/004.jpg" alt="Image 04" /></a></li>
-					<li><a href="test/images/full/005.jpg" rel="external"><img src="test/images/thumb/005.jpg" alt="Image 05" /></a></li>
-					<li><a href="test/images/full/006.jpg" rel="external"><img src="test/images/thumb/006.jpg" alt="Image 06" /></a></li>
-				-->
-				</ul>
-			</div>
+			<script type="text/javascript" src="js/albumList.js"></script>
+			<div data-role="content">
+                <ul id='albumListContent' data-role="listview">
+                	
+                </ul>
+            </div>
 		</div>
+		
 	</body>
 </html>
