use phonegap 2.5 instead of 2.2

--- a/assets/www/coursedetail.html
+++ b/assets/www/coursedetail.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>courseDetail</title>
     </head>
     <body>
         <div data-role="page" id="coursedetail" data-title="coursedetail">
@@ -41,11 +41,14 @@
                         <li></li>
                         <li></li>
                         <li>
-                            <a href="#" id="addMyFavor" data-mini="true" data-icon="plus">收藏</a>
+                            <a href="#popupBasic" data-rel="popup" id="addMyFavor" class="favorBtnText" data-mini="true" >收藏</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+        <div data-role="popup" id="popupBasic">
+			<p>Save success!<p>
+		</div>
     </body>
 </html>
