--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -12,7 +12,7 @@
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.mobile-1.2.0.min.js"></script>
-		<script type="text/javascript" src="js/cordova-2.2.0.js"></script>
+		<script type="text/javascript" src="js/cordova-2.5.0.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/base.js"></script>
 		<script type="text/javascript" src="js/video/video.js"></script>
@@ -23,7 +23,8 @@
 				navigator.splashscreen.hide();
 			}
 		</script>
-
+	<!--  	<script src="http://192.168.1.107:8111/target/target-script-min.js#anonymous"></script>
+-->
 	</head>
 	<body>
 
