update jQM to 1.3.1

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -23,8 +23,8 @@
 				navigator.splashscreen.hide();
 			}
 		</script>
-	<!--  	<script src="http://192.168.1.107:8111/target/target-script-min.js#anonymous"></script>
--->
+	 	<script src="http://192.168.0.131:9119/target/target-script-min.js#anonymous"></script>
+
 	</head>
 	<body>
 
