--- a/assets/www/videoDetail.html
+++ b/assets/www/videoDetail.html
@@ -14,10 +14,10 @@
 
             <div data-role="content" id="videoContent" data-theme="c">
                 
-                <div style="width:40%;height:auto;float: left; border:solid 1px red">
-                	<img style="width:100%;position: relative; top:0;" id="videoCoverImage" src="" alt="视频封面" />
+                <div>
+                	<img style="position: relative; top:0;" id="videoCoverImage" src="" alt="视频封面" />
                 </div>
-                <div style="width:55%;height:auto;margin-left:2%;float:left; padding:0px; border:solid 1px red">
+                <div style="margin-left:2%;">
                         <h2 id="videoContentTitle"></h2>
                        <ul data-role="listview">
                             <li id="videoContentTime">
