--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<title>index</title>
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1" /> -->
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" href="style/jquery.mobile-1.3.1.min.css" />
-		<link rel="stylesheet" href="style/jquery.mobile.theme-bistu.css" type="text/css" media="screen" charset="utf-8"/>
-		<link rel="stylesheet" href="style/index.css" />
-		<link rel="stylesheet" href="style/photoswipe.css" />
+    <head>
+        <meta charset="UTF-8">
+        <title>index</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <link rel="stylesheet" href="style/jquery.mobile-1.3.1.min.css" />
+        <link rel="stylesheet" href="style/jquery.mobile.theme-bistu.css" type="text/css" media="screen" charset="utf-8"/>
+        <link rel="stylesheet" href="style/index.css" />
+        <link rel="stylesheet" href="style/photoswipe.css" />
 
-		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/jquery.mobile-1.3.1.min.js"></script>
-		<script type="text/javascript" src="js/cordova-2.7.0.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="js/base.js"></script>
-		<script type="text/javascript" src="js/video/video.js"></script>
-		<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.3.1.min.js"></script>
+        <script type="text/javascript" src="js/cordova-2.7.0.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
+        <script type="text/javascript" src="js/video/video.js"></script>
+        <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.3"></script>
 		<script type="text/javascript" charset="utf-8">
 			document.addEventListener("deviceready", onDeviceReady, false);
 			function onDeviceReady() {
@@ -39,70 +39,10 @@
 			<div data-role="content" style="border: none;" id="indexOfApp" data-theme="c">
 				<div class="ui-grid-c mainpage" id="indexPageGrid" style="text-align:center">
 
-					<!-- <div class="ui-block-c">
-						<a href="news.html" id="index2news"><img src="images/news.png"/></a>
-						<div>
-							新闻
-						</div>
-					</div>
-					<div class="ui-block-c">
-						<a href="collegeList.html" id='index2intro'><img src="images/colleges.png"></a>
-						<div>
-							学院
-						</div>
-					</div>
-					<div class="ui-block-c">
-						<a href="map.html" id="index2map"><img src="images/map.png"/></a>
-						<div>
-							地图
-						</div>
-					</div> -->
-					<!-- <div class="ui-block-c">
-						<a href="activities.html" id="index2activity"><img alt="活动" src="images/activities.png"/></a>
-						<div>
-							活动
-						</div>
-					</div> -->
-					<!-- <div class="ui-block-c">
-						<a href="videoType.html" id="index2video"><img src="images/video.png"></a>
-						<div>
-							视频
-						</div>
-					</div>
-					<div class="ui-block-c">
-						<a href="albumlist.html" id="index2album"><img src="images/photo.png"></a>
-						<div>
-							相册
-						</div>
-					</div>
-					<div class="ui-block-c">
-						<a href="college.html" id="index2course"><img src="images/course.png"></a>
-						<div>
-							课程
-						</div>
-					</div> -->
-					<!-- <div class="ui-block-c">
-						<a href="building.html" id="index2classroom"><img src="images/classroom.png"></a>
-						<div>
-							教室
-						</div>
-					</div> -->
-					<!-- <div class="ui-block-c">
-						<a href="schoolBus.html" id="index2bus"><img src="images/car.png"></a>
-						<div>
-							校车
-						</div>
-					</div>
-					<div class="ui-block-c">
-						<a href="yellowpage.html" id="index2yellowpage"><img src="images/yellowpage.png"></a>
-						<div>
-							黄页
-						</div>
-					</div> -->
 
-				</div>
+            </div>
 
-			</div>
+        </div>
 
 			<div data-role="footer"  data-position="fixed" class="overhidden nav-glyphish-example">
 				<div data-role="navbar" class="nav-glyphish-example"  data-theme="a">
